impl guests get rooms
